// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  class="c0"
/>
`;

exports[`Text renders with prop fontSize 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 18px;
}

<div
  class="c0"
  font-size="18"
/>
`;

exports[`Text renders with prop fontWeight 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-weight: 500;
}

<div
  class="c0"
  font-weight="500"
/>
`;

exports[`Text renders with prop textAlign 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  text-align: center;
}

<div
  class="c0"
/>
`;

exports[`Text renders with prop width 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
}

<div
  class="c0"
  width="1"
/>
`;
